--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@ h1 {
     font-size: 3rem;
 }
 
+#lastAnswerCorrect {
+    font-size: 4rem;
+}
+
 .btn-game {
     font-family: 'Bungee', cursive;
     height: 150px;
