--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,12 +169,19 @@ h1 {
     color: var(--color-black);
     background-color: var(--color-modal);
     margin: 15% auto;
-    /* 15% from the top and centered */
     padding: 20px;
+    text-align: left;
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     border: var(--color-black) solid 5px;
     width: 80%;
-    /* Could be more or less, depending on screen size */
+}
+
+.modal-content h2 {
+    padding-bottom: 1rem;
+}
+
+.modal-content hr {
+    margin: 1rem 0;
 }
 
 /* The Close Button */
@@ -187,7 +194,7 @@ h1 {
 
 .close:hover,
 .close:focus {
-    color: black;
+    color: var(--color-black);
     text-decoration: none;
     cursor: pointer;
 }
@@ -195,5 +202,6 @@ h1 {
 #help-controls {
     list-style: none;
     text-align: left;
+    padding-right: 3rem;
 }
 
