--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     --color-three: rgb(242,221,129);
     --color-four: rgb(101,188,183);
     --color-black: rgb(43,47,47);
+    --transition-effect: all ease-in-out 0.3s;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -73,10 +74,10 @@ nav a {
 header {
     background-color: var(--color-header);
     margin-bottom: 0.5rem;
-    border-bottom: var(--color-black) solid 5px;
+    border-bottom: var(--color-black) solid 0.3rem;
     display: flex;
     justify-content: space-between;
-    padding: 0 1rem;
+    padding: 0.5rem 1.2rem;
     color: var(--color-black);
 }
 
@@ -88,12 +89,14 @@ nav {
 nav ul li {
     display: inline;
     list-style: none;
+    padding: 0 0.1rem;
 }
 
 
 h1 {
     font-family: 'Bungee', cursive;
     font-size: 2rem;
+    cursor: default;
 }
 
 #countdown-timer {
@@ -101,7 +104,7 @@ h1 {
     font-size: 3rem;
 }
 
-#lastAnswerDisplay {
+#lastAnswerDisplay, .btn-share {
     font-size: 1rem;
     background-color: var(--color-header);
     color: var(--color-black);
@@ -110,6 +113,19 @@ h1 {
     display: inline-block;
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     border: var(--color-black) solid 5px;
+}
+
+.btn-share {
+    width: 80%;
+    transition: var(--transition-effect);
+}
+
+.btn-share svg {
+    margin: 0 0.5rem;
+}
+
+.btn-share:hover {
+    background-color: var(--color-two);
 }
 
 .btn-game {
@@ -145,19 +161,13 @@ h1 {
 /* The Modal (background) */
 .modal {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 1;
-    /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
     overflow: auto;
-    /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
     /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
@@ -174,6 +184,7 @@ h1 {
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     border: var(--color-black) solid 5px;
     width: 80%;
+    max-width: 500px;
 }
 
 .modal-content h2 {
@@ -190,6 +201,7 @@ h1 {
     float: right;
     font-size: 3rem;
     font-weight: bold;
+    transition: var(--transition-effect);
 }
 
 .close:hover,
