Add sound effects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ label[for=timer] {
     transition: all ease-in-out 0.1s;
 }
 
-.btn-game:hover, .btn-game:focus {
+.btn-game:hover {
     border: var(--color-black) dashed 0.4rem;
 }
 
