Add more comments to JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,8 +161,13 @@ label[for=timer] {
     color: var(--color-black);
     padding: 1rem;
     margin: 1rem;
-    border-radius: var(--border-wavy);
+    border-radius: 0.3rem;
+    -webkit-border-radius: var(--border-wavy);
     border: var(--color-black) solid 5px;
+}
+
+#game-btns {
+    line-height: 1;
 }
 
 #scoreboard {
